--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@prisma/client": "^5.21.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^11.0.1",
     "mongodb": "^6.10.0",
-    "next": "^15.0.1",
+    "next": "^14.2.16",
     "next-auth": "^4.24.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
